Feature/vava 56 new fxml screens (#27)
* Added new screen did not run it yet

* imporved input validation

* Feat: add svg icons

* Refactor: finalized Menu screen (+ .css),MenuController working and ready for next screens

* Refactor: finalized Cost Estimation Screen according Figma design

* Fix: icon formats

* fix import

* Semi-dynamic menu generation completed

Bug: don't know how to set light versions of the buttons

* Ligh and dark version of menu items working

* Refactor: fixed syntactical error handling - login screen

* Refactor: fixed syntactical error handling - login and register screen

* Feat: added working BaseController for data transfer between screens, CostBreakdown,UserManagment screen prototype

* Refactor: error handling and cleaning

* fix CostEstimation can be opened in scene builder

* feature/ imporoved cost estimation screen

* Feat: add new screens [DailyCostSummaries,DailyCostsSummaryDetail,WarehouseManagment]

* Warehouse Management screen. Including popups.

* Refactor: show password on login,register + all functions in CostEstimation working

* Fix: fixed bug with popups not darkening the whole screen correctly

* Feat: Pridanie obrazovky "Edit warehouse"

* Refactor: code refactor, show password button added

* Fix: fixed scrollbar and phantom bug on "Edit warehouse" screen

* Fix: Scrollbar in "Warehouse management" is now more like in figma

* Fix: "Warehouse management" screen changing font size fixed

* Feat: ShipmentDetail screen ready to use with popup

* Feat: Added "Small price list" screen.

* merge from main I don't have fucking clue what this does

---------

Co-authored-by: ZEPHY <xbukovinam@stuba.sk>
Co-authored-by: Viktória Latičová <xlaticova@stuba.sk>
Co-authored-by: xcernickaj <jurko.cnk@gmail.com>